added category create+delete endpoints
